# pykanji

./: .gitignore  LICENSE  README.rst  love.xml  pyproject.toml
pykanji/: -- SQLite.sql  Kanji.py  KanjiDicReader.py  __main__.py  cli.py  crud.py  database.py  initdb.py  main.py  models.py  views.py
pykanji/api/: api.py  crud.py  schemas.py
pykanji/api/v1/: api.py  crud.py  schemas.py
tests/: test_pykanji.py
