[tool.poetry]
name = "pykanji"
version = "0.1.0"
description = ""
authors = ["Misael Valentin <misael.vf2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
SQLAlchemy = {version = "^1.4.40", allow-prereleases = true}
click = "^8.1.3"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pykanji = "pykanji.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
